# RayTracerDemo

./: .gitignore  CMakeLists.txt  README.md  run_all.sh
include/: aabb.hpp  bernstein.hpp  bvh_node.hpp  camera.hpp  constant_medium.hpp  cosine_pdf.hpp  curve.hpp  group.hpp  hemisphere_pdf.hpp  hit.hpp  image.hpp  interval.hpp  light.hpp  material.hpp  mesh.hpp  mixture_pdf.hpp  object3d.hpp  object_pdf.hpp  pdf.hpp  plane.hpp  quad.hpp  random.hpp  ray.hpp  scene.hpp  scene_provider.hpp  sphere.hpp  surface.hpp  texture.hpp  transform.hpp  transformation.hpp  triangle.hpp
src/: image.cpp  main.cpp  mesh.cpp  object_pdf.cpp  scene.cpp  transformation.cpp
